--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,28 @@
-pyqtgraph
+altgraph==0.17
 cffi==1.14.0
+future==0.18.2
 MouseInfo==0.1.2
 mss==5.0.0
 numpy==1.18.1
 opencv-python==4.2.0.32
+pefile==2019.4.18
 Pillow==7.0.0
 PyAutoGUI==0.9.48
 pycparser==2.19
 PyGetWindow==0.0.8
+PyInstaller==3.6
 PyMsgBox==1.0.7
 pyperclip==1.7.0
 PyQt5==5.14.1
 PyQt5-sip==12.7.1
+PyQt5-stubs==5.13.1.4
+PyQtChart==5.14.0
+pyqtgraph==0.10.0
 pyqtkeybind==0.0.4
 PyRect==0.1.4
 PyScreeze==0.1.26
 PyTweening==1.0.3
+pywin32-ctypes==0.2.0
 shiboken2==5.14.1
 six==1.14.0
 xcffib==0.9.0
